# mp-pong-stm32f7

./: .gdbinit  .gdbinitv8  .gitignore  Cargo.toml  build-release.sh  build.sh  gdb.sh  run-release.sh  stm32f7.ld
.cargo/: config
res/: empty.img
src/: ball.rs  fps.rs  game.rs  geometry.rs  graphics.rs  input.rs  main.rs  menu.rs  network.rs  physics.rs  racket.rs
src/lcd/: color.rs  empty.pic  init.rs  mod.rs  text.rs
src/network/: mod.rs  packets.rs
tools/: empty.pgm  l2al.py  pgm2img.sh  pgm2pic.sh  test_udp_server.py  udp_client_receive.py  udp_client_send.py  udp_client_whoami.py  udp_send.py  udp_server.py  udp_server_receive.py  udp_server_send_gamestate.py
