[package]
name = "mp-pong-stm32f7"
version = "0.1.0"
authors = ["bitowl <git@bitowl.de>","Niko16"]

[dependencies]
cortex-m = "0.1.4"
r0 = "0.1.0"

[dependencies.stm32f7_discovery]
git = "https://github.com/embed-rs/stm32f7-discovery.git"
branch="smoltcp"
version = "0.1.0"

[profile]

[profile.release]
lto = true